--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -8,7 +8,7 @@ form {
   width: 50%;
 }
 
-form, .fullName, .email, .phone, .location, .jobTitle {
+form, .fullName, .email, .phone, .location, .jobTitle, .summary {
   display: flex;
   flex-direction: column;
   text-align: start;
@@ -18,14 +18,14 @@ h1 {
   font-size: 1.5rem;
 }
 
-form input {
+form input, textarea {
   border-radius: 5px;
   background-color: rgb(243, 242, 242);
   font-size: 1.1rem;
   outline: none;
 }
 
-form input:focus {
+form input:focus, textarea:focus {
   outline: none;
   border: 3px solid dodgerblue;
 }
@@ -51,6 +51,21 @@ form input:focus {
   gap: 15px;
 }
 
+.show-social {
+  display: flex;
+}
+
+/* .social-links {
+  display: none;
+} */
+
 .social-links input {
   width: 100%;
+}
+
+.show-social-open {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 10px;
 }
