--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -1,9 +1,8 @@
 .preview-content {
   background-color: #fff;
   box-shadow: 3px 3px 5px lightgrey;
-  /* width: 50%; */
-  text-align: center;
   flex: 1;
+  display: flex;
 }
 
 .app {
@@ -20,4 +19,52 @@
 
 .edit-side form {
   width: 80%;
+}
+
+.contact-info {
+  background-color: rgb(32, 47, 113);
+  width: 30%;
+  color: #fff;
+  padding: 20px;
+  text-align: start;
+}
+
+.preview-info {
+  padding: 20px;
+}
+
+.brands {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.contact-social-links {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.contact-location {
+  margin-bottom: 35px;
+}
+
+h2 {
+  font-size: 1.25rem;
+}
+
+h1, h2 {
+  margin: 0;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+hr, .contact-phone, .contact-email, .contact-location {
+  margin-bottom: 15px;
+}
+
+.contact-education-title, .preview-experience-title {
+  margin-top: 15px;
 }
