--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -34,9 +34,25 @@ form input:focus, textarea:focus{
 }
 
 button{
+  display: block;
   width: 35%;
   border: 1px solid black;
+  font-size: 1.5rem;
+  background-color: rgb(239, 237, 237);
+  margin-bottom: 15px;
   margin: 0 auto;
+}
+
+.add-education {
+  border: 0;
+}
+
+.add-container {
+  width: 80%;
+  display: flex;
+  flex-wrap: nowrap;
+  margin-bottom: 15px;
+  text-wrap: nowrap;
 }
 
 .show-social-open:hover, .show-education, .show-experience,
@@ -102,4 +118,14 @@ button{
 
 textarea {
   resize: none;
+}
+
+.exampleButton, .clearButton {
+  margin-bottom: 10px;
+}
+
+.contact-education {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
